force-app/main/default/objects/ucinn_ascendv2__Giving_Details_Display_Setting__mdt/ucinn_ascendv2__Giving_Details_Display_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Custom Settings for the Giving Details page on the Bio Demo for Household, Constituent, and Organization.</description>
    <label>Giving Details Display Setting</label>
    <pluralLabel>Giving Details Display Settings</pluralLabel>
</CustomObject>