force-app/main/default/objects/ucinn_ascendv2__Giving_Details_Display_Setting__mdt/fields/ucinn_ascendv2__Gift_Table_Title__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Gift_Table_Title__c</fullName>
    <description>Customized table title for Gift table.</description>
    <inlineHelpText>Customized table title for Gift table.</inlineHelpText>
    <label>Gift Table Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>