force-app/main/default/objects/ucinn_ascendv2__Giving_Details_Display_Setting__mdt/fields/ucinn_ascendv2__Order_by_Direction__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Order_by_Direction__c</fullName>
    <description>The ordering of the data for the default column to sort by.</description>
    <inlineHelpText>The ordering of the data for the default column to sort by. The possible values: ASC, DESC. If undefined, the ordering is ASC.</inlineHelpText>
    <label>Order by Direction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>