force-app/main/default/objects/ucinn_ascendv2__Giving_Details_Display_Setting__mdt/fields/ucinn_ascendv2__Order_by_String_for_Record_Retrieval__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Order_by_String_for_Record_Retrieval__c</fullName>
    <description>Used to internally sort the util table records before any frontend processing.</description>
    <inlineHelpText>Used to internally sort the util table records before any frontend processing.</inlineHelpText>
    <label>Order by String for Record Retrieval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>