force-app/main/default/objects/ucinn_ascendv2__Giving_Details_Display_Setting__mdt/fields/ucinn_ascendv2__Page_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Page_Record_Type__c</fullName>
    <description>The donor page type.</description>
    <inlineHelpText>The name of the donor type.</inlineHelpText>
    <label>Page Record Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>