force-app/main/default/objects/ucinn_ascendv2__Giving_Details_Display_Setting__mdt/fields/ucinn_ascendv2__Pledges_Recurring_Gift_Table_Title__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Pledges_Recurring_Gift_Table_Title__c</fullName>
    <description>Customized table title for Pledge / Recurring Gift Commitments table. This title only renders if Recurring Gift is enabled in the org.</description>
    <inlineHelpText>Customized table title for Pledge / Recurring Gift Commitments table. This title only renders if Recurring Gift is enabled in the org.</inlineHelpText>
    <label>Pledges/Recurring Gift Table Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>