force-app/main/default/objects/ucinn_ascendv2__Giving_Details_Display_Setting__mdt/fields/ucinn_ascendv2__Sort_by_Column__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Sort_by_Column__c</fullName>
    <description>The default column for the Giving Details Table to sort by.</description>
    <inlineHelpText>The default column for the Giving Details Table to sort by.</inlineHelpText>
    <label>Sort by Column</label>
    <length>255</length>
    <type>Text</type>
</CustomField>