force-app/main/default/objects/ucinn_ascendv2__Giving_Details_Display_Setting__mdt/fields/ucinn_ascendv2__Util_Table_Column_Order__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Util_Table_Column_Order__c</fullName>
    <description>The predefined ordering for the util table columns.</description>
    <inlineHelpText>All values listed are the column header labels for the Giving Details Util Table. They will be rendered from left to right according to the specified order, separated by commas.</inlineHelpText>
    <label>Util Table Column Order</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>